Grace/tests/gibbs/errors/t290.grace
// ERROR = L0009
var list := [1, 2, 3]
list[.]
